--- a/app/views/baselayout.phtml
+++ b/app/views/baselayout.phtml
@@ -4,7 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>SQ Framework</title>
-		<link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+		<!--<link rel="stylesheet" type="text/css" href="/assets/css/main.css" />-->
+		<!--<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" />-->
+		<link rel="stylesheet" type="text/css" href=<?php echo BOOTSTRAPCSS; ?> />
 		
 		
 	</head>
